tests/expectations/parser/structs/comma_separators_fail.out
Error [EPAR0370047]: expected ','
    --> test:4:9
     |
   4 |         y: u8
     |         ^
